[DEV] ajout js/ts debut (il faut que je revoie le fonctionnement de ts)

--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -1,13 +1,22 @@
-<main class="containerHeader">
-  <div class="left"></div>
-  <div class="center">
-    <img src="../../../assets/png/logo.png" alt="Logo" />
+
+  <div class="navbar">
+    <div class="socials">FB</div>
+
+    <a href="#" class="nav-icon" aria-label="Visit homepage" aria-current="page">
+      <img src="../../../assets/png/logo.png" alt="Logo"/>
+    </a>
+
+    <div class="nav-links">
+      <button class="hamburger" type="button" aria-label="Toggle navigation" aria-expanded="false">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <div class="navlinks-container">
+        <a href="#" aria-current="page">Bar</a>
+        <a href="#">Escape Game</a>
+        <a href="#">Arcade</a>
+      </div>
+    </div>
   </div>
-  <div class="right">
-    <button class="hamburger" type="button" aria-label="Toggle navigation">
-      <span></span>
-      <span></span>
-      <span></span>
-    </button>
-  </div>
-</main>
+
