--- a/src/app/partials/header/header.component.scss
+++ b/src/app/partials/header/header.component.scss
@@ -1,60 +1,192 @@
-.containerHeader {
+$font0: Arial, Helvetica, sans-serif;
+$font1: Roboto;
+$font2: RobotoBlack;
+
+// $colorNavbarBg: #fafafa;
+$colorNavbarBg: #aaaaaa;
+$colorNavbarLight: #fafafa;
+$colorNavbarDark: #696969;
+
+$colorLogoText: #00d3ff;
+
+$test: 18px;
+$sizeLogo: 40px;
+
+$fontsizeNavLinks: 20px;
+$fontsizeNavRoll: 18px;
+$fontsizeSignBtn: 16px;
+
+
+//
+//  .nav-links {
+//    flex-basis: 25%;
+//    display: flex;
+//    flex-direction: column;
+//    align-items: flex-end;
+//
+//    .hamburger {
+//      position: relative;
+//      display: block;
+//      width: 30px;
+//      max-width: 50%;
+//      height: 20px;
+//      border: none;
+//      background: #101010;
+//      cursor: pointer;
+//
+//      span {
+//        position: absolute;
+//        display: block;
+//        width: 100%;
+//        height: 3px;
+//        border-radius: calc(3px / 2);
+//        background: white;
+//        pointer-events: none;
+//
+//        &:nth-of-type(1) {
+//          transform: translateY(-7px);
+//        }
+//
+//        &:nth-of-type(3) {
+//          transform: translateY(7px);
+//        }
+//      }
+//    }
+//  }
+//}
+
+
+.navbar {
+  position: relative;
   display: flex;
   padding: 2vh 5vw;
   background: #101010;
   width: 100vw;
   height: 20vh;
 
-  .center {
+  .socials {
+    flex-basis: 25%;
+    color: white;
+  }
+
+  .nav-icon {
     flex-basis: 50%;
     align-self: center;
     text-align: center;
 
     img {
-    //   width: 100%;
-    //   max-height: 18vh;
+      //   width: 100%;
+      //   max-height: 18vh;
       height: 15vh;
     }
   }
 
-  .left {
-    flex-basis: 25%;
-    color: white;
-  }
-
-  .right {
+  .nav-links {
     flex-basis: 25%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 
     .hamburger {
-        position: relative;
-        display: block;
-        width: 30px;
-        max-width: 50%;
-        height: 20px;
-        border: none;
-        background: #101010;
-        cursor: pointer;
+      position: relative;
+      display: block;
+      width: 30px;
+      max-width: 50%;
+      height: 20px;
+      border: none;
+      background: #101010;
+      cursor: pointer;
 
       span {
         position: absolute;
         display: block;
         width: 100%;
         height: 3px;
-        border-radius: calc(3px /2 );
+        border-radius: calc(3px / 2);
         background: white;
         pointer-events: none;
 
         &:nth-of-type(1) {
-            transform: translateY(-7px);
+          transform: translateY(-7px);
         }
 
         &:nth-of-type(3) {
-            transform: translateY(7px);
+          transform: translateY(7px);
+        }
+      }
+
+      &.open {
+        span:nth-of-type(1) {
+          transform: translate(0) rotate(135deg);
+        }
+
+        span:nth-of-type(2) {
+          opacity: 0;
+          transition: opacity 0.3s ease-out;
+        }
+
+        span:nth-of-type(3) {
+          transform: translate(0) rotate(-135deg);
+        }
+      }
+    }
+
+    .navlinks-container {
+
+      a {
+        // position: relative;
+        display: inline-block;
+        margin: 0 10px;
+        width: fit-content;
+        font-family: $font1;
+        font-size: $fontsizeNavLinks;
+        font-weight: 100;
+        text-decoration: none;
+        color: $colorNavbarDark;
+
+        &:hover {
+          color: $colorNavbarLight;
+        }
+
+        &::after {
+          content: "";
+          display: block;
+          width: 100%;
+          height: 1px;
+          bottom: -1px;
+          background: $colorNavbarLight;
+          transform: scaleX(0);
+          transform-origin: center;
+          transition: transform 0.2s ease-out;
+        }
+
+        &:hover::after {
+          transform: scaleX(1);
         }
       }
     }
   }
-}
+
+  .nav-authentication {
+    margin-left: auto;
+
+    .user_sign_in {
+      display: none;
+      width: 20px;
+    }
+
+    .sign-btn {
+      button {
+        min-width: 90px;
+        border: none;
+        border-radius: 15px;
+        padding: 5px 10px;
+        margin: 0 5px;
+        cursor: pointer;
+        font-family: $font1, $font0;
+        font-size: $fontsizeSignBtn;
+        background: $colorNavbarDark;
+        color: $colorNavbarLight;
+      }
+    }
+  }
