--- a/src/app/partials/header/header.component.scss
+++ b/src/app/partials/header/header.component.scss
@@ -2,71 +2,66 @@ $font0: Arial, Helvetica, sans-serif;
 $font1: Roboto;
 $font2: RobotoBlack;
 
+$colorBG: #101010;
+
 // $colorNavbarBg: #fafafa;
 $colorNavbarBg: #aaaaaa;
 $colorNavbarLight: #fafafa;
 $colorNavbarDark: #696969;
 
-$colorLogoText: #00d3ff;
+$colorLogoText: #01ffff;
 
-$test: 18px;
 $sizeLogo: 40px;
 
 $fontsizeNavLinks: 20px;
-$fontsizeNavRoll: 18px;
 $fontsizeSignBtn: 16px;
-
-
-//
-//  .nav-links {
-//    flex-basis: 25%;
-//    display: flex;
-//    flex-direction: column;
-//    align-items: flex-end;
-//
-//    .hamburger {
-//      position: relative;
-//      display: block;
-//      width: 30px;
-//      max-width: 50%;
-//      height: 20px;
-//      border: none;
-//      background: #101010;
-//      cursor: pointer;
-//
-//      span {
-//        position: absolute;
-//        display: block;
-//        width: 100%;
-//        height: 3px;
-//        border-radius: calc(3px / 2);
-//        background: white;
-//        pointer-events: none;
-//
-//        &:nth-of-type(1) {
-//          transform: translateY(-7px);
-//        }
-//
-//        &:nth-of-type(3) {
-//          transform: translateY(7px);
-//        }
-//      }
-//    }
-//  }
-//}
-
 
 .navbar {
   position: relative;
   display: flex;
   padding: 2vh 5vw;
-  background: #101010;
+  background: $colorBG;
   width: 100vw;
-  height: 20vh;
+  height: 15vh;
 
+  // Logo Facebook
+  $fb-bg-color: #3b5998;
+  $fb-text-color: #eee;
+  $fb-size: 30px;
   .socials {
     flex-basis: 25%;
-    color: white;
+    .facebook {
+      position: relative;
+      background: $fb-bg-color;
+      width: $fb-size;
+      height: $fb-size;
+      border-radius: calc($fb-size / 10);
+      
+      overflow: hidden;
+      border: calc($fb-size / 7) solid $fb-bg-color;
+      border-bottom: 0;
+      display: inline-block;
+
+      &::before {
+        position: absolute;
+        top: calc($fb-size / 7);
+        right: calc($fb-size / -1.4);
+        content: "";
+        width: $fb-size;
+        height: $fb-size;
+        border: calc($fb-size / 7) solid $fb-text-color;
+        border-radius: calc($fb-size / 5);
+      }
+      &::after {
+        position: absolute;
+        top: calc($fb-size / 2.2);
+        right: 0;
+        content: "";
+        background: $fb-text-color;
+        width: calc($fb-size / 2.2);
+        height: calc($fb-size / 7);
+      }
+    }
   }
 
   .nav-icon {
@@ -75,13 +70,12 @@ $fontsizeSignBtn: 16px;
     text-align: center;
 
     img {
-      //   width: 100%;
-      //   max-height: 18vh;
-      height: 15vh;
+      height: 10vh;
     }
   }
 
   .nav-links {
+    position: relative;
     flex-basis: 25%;
     display: flex;
     flex-direction: column;
@@ -132,21 +126,35 @@ $fontsizeSignBtn: 16px;
     }
 
     .navlinks-container {
+      position: absolute;
+      display: grid;
+      grid-template-rows: repeat(3, auto);
+      top: 25px;
+      right: 0px;
+      margin: 0;
+      padding: 5px 5px;
+      width: auto;
+      height: auto; //calc(20vh);
+      border-left: 2px solid $colorNavbarDark;
+      border-right: 2px solid $colorNavbarDark;
+      border-bottom: 2px solid $colorNavbarDark;
+      background: $colorNavbarLight;
+      z-index: 1;
+      transform: scaleY(0) scaleX(0);
+      transform-origin: top right;
+      transition: transform 0.2s ease-out;
 
       a {
         // position: relative;
         display: inline-block;
-        margin: 0 10px;
+        padding: 5px 10px;
         width: fit-content;
         font-family: $font1;
         font-size: $fontsizeNavLinks;
         font-weight: 100;
+        // line-height: .8em;
         text-decoration: none;
         color: $colorNavbarDark;
-
-        &:hover {
-          color: $colorNavbarLight;
-        }
 
         &::after {
           content: "";
@@ -154,39 +162,21 @@ $fontsizeSignBtn: 16px;
           width: 100%;
           height: 1px;
           bottom: -1px;
-          background: $colorNavbarLight;
+          background: $colorNavbarDark;
           transform: scaleX(0);
           transform-origin: center;
           transition: transform 0.2s ease-out;
         }
 
         &:hover::after {
+          transform: scaleY(1);
           transform: scaleX(1);
         }
       }
-    }
-  }
 
-  .nav-authentication {
-    margin-left: auto;
-
-    .user_sign_in {
-      display: none;
-      width: 20px;
-    }
-
-    .sign-btn {
-      button {
-        min-width: 90px;
-        border: none;
-        border-radius: 15px;
-        padding: 5px 10px;
-        margin: 0 5px;
-        cursor: pointer;
-        font-family: $font1, $font0;
-        font-size: $fontsizeSignBtn;
-        background: $colorNavbarDark;
-        color: $colorNavbarLight;
+      &.open {
+        transform: scaleY(1);
       }
     }
   }
+}
