--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -15,9 +15,9 @@
       <span></span>
     </button>
     <div class="navlinks-container" [class.open]="_hamburgerOpen">
-      <a routerLink="#" aria-current="page">Bar</a>
-      <a routerLink="">Escape Game</a>
-      <a routerLink="">Arcade</a>
+      <a routerLink="#bar" aria-current="page">Bar</a>
+      <a routerLink="#escape">Escape Game</a>
+      <a routerLink="#arcade">Arcade</a>
     </div>
   </div>
 </div>
