--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,47 @@
-<div class="container">
+<div class="container" id="bar">
   <div class="card">
     <img class="picture" src="../../../assets/png/picture_bar.png" alt="" />
     <div class="title">Bar</div>
+    <div class="content">
+      <aside class="left">
+        <ul>
+          Snacking :
+          <li>Croque monsieur</li>
+          <li>Panini</li>
+          <li>Ramens</li>
+          <li>Diff sandwish</li>
+          <li>Planches aperitives</li>
+          <li>...</li>
+        </ul>
+        <ul>
+          Boissons :
+          <li>Misir</li>
+          <li>Sodas</li>
+          <li>Lmonades</li>
+          <li>cocktails</li>
+          <li>...</li>
+        </ul>
+        <p>Retrouvez notre offre de produit japonais et bien plus encore!</p>
+      </aside>
+      <aside class="right">
+        <h3>En ce moment</h3>
+        <article>
+          <img src="https://cdn.shopify.com/s/files/1/0553/6641/8608/products/Verres-a-cocktail-tequila-sunrise_360x.png?v=1631024133" alt="">
+          <h4>Le Robusto</h4>
+        </article>
+        <article>
+          <img src="https://cdn.shopify.com/s/files/1/0553/6641/8608/products/Verres-a-cocktail-tequila-sunrise_360x.png?v=1631024133" alt="">
+          <h4>Le Choco Cookie</h4>
+        </article>
+        <article>
+          <img src="https://cdn.shopify.com/s/files/1/0553/6641/8608/products/Verres-a-cocktail-tequila-sunrise_360x.png?v=1631024133" alt="">
+          <h4>Ramune Ananas</h4>
+        </article>
+      </aside>
+    </div>
   </div>
 
-  <div class="card">
+  <div class="card" id="escape">
     <img
       class="picture"
       src="../../../assets/png/picture_escape-game.png"
@@ -13,22 +50,20 @@
     <div class="title">Escape Game</div>
   </div>
 
-  <div class="card">
+  <div class="card" id="arcade">
     <img class="picture" src="../../../assets/png/picture_arcade.png" alt="" />
     <div class="title">Arcade</div>
   </div>
 
   <div class="coordinates">
     <p>Player's Bar</p>
-    <p>3 Rue Eugéne Rouher<br>63200 Riom</p>
+    <p>3 Rue Eugéne Rouher<br />63200 Riom</p>
     <p>Téléphone : 04373.38.02.45</p>
     <p>Email : graffx63@gmail.com</p>
   </div>
 
   <div class="hours">
     <p>Horaires d'ouverture :</p>
-    <p>Du mardi au samedi<br>de 12h à 23h</p>
+    <p>Du mardi au samedi<br />de 12h à 23h</p>
   </div>
-
-
 </div>
