--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,6 +5,8 @@ $font2: RobotoBlack;
 $colorBG: #101010;
 $colorText: #fafafa;
 $colorTextSelected: #01ffff;
+$colorBgTitle: #ffffff20;
+$colorBgText: #01010195;
 
 $colorDark: #101010;
 $colorLight: #fafafa;
@@ -12,24 +14,23 @@ $colorLight: #fafafa;
 .container {
   display: flex;
   flex-direction: column;
-  // justify-content: center;
   align-items: center;
-  position: relative;
   width: 100vw;
 
   background-image: url(../../../assets/png/background.png);
   background-size: contain;
 
-  .displayNone {
-    display: none;
+  .empty {
+    height: 12vh;
   }
 
   .card {
     position: relative;
     display: flex;
-    justify-content: center;
-    max-width: 70%;
-    margin: 50px 0;
+    flex-direction: column;
+    align-items: center;
+    max-width: 95%;
+    margin: 10px 0;
 
     .picture {
       max-width: 100%;
@@ -39,26 +40,45 @@ $colorLight: #fafafa;
       position: absolute;
       top: 20px;
       width: 90%;
+      border: none;
       border-radius: 15px;
-      background: #ffffff20;
-      font-size: 2em;
+      background: $colorBgTitle;
+      font-size: 3em;
       text-align: center;
       color: $colorTextSelected;
+      cursor: pointer;
+    }
+
+    p {
+      color: $colorText;
+      font-size: 1.5em;
+      padding-top: 1em;
     }
 
     .content {
       position: absolute;
+      top: 15%;
       display: flex;
-      top: 70px;
       width: 90%;
-      height: calc(95% - 70px);
+      height: 80%;
       color: $colorText;
       padding: 5px 10px;
+      background: $colorBgText;
+      border-radius: 10px;
 
       .left {
-        // flex-grow: 1;
-        // flex-shrink: 2;
         width: 55%;
+
+        ul {
+          list-style: none;
+          margin-bottom: 20px;
+          font-size: .9em;
+        }
+        
+        p {
+          padding: 0;
+          font-size: .70em;
+        }
       }
 
       .right {
@@ -72,7 +92,7 @@ $colorLight: #fafafa;
 
         .h3 {
           width: 100%;
-          font-size: .5em;
+          font-size: 0.9em;
         }
 
         article {
@@ -85,30 +105,18 @@ $colorLight: #fafafa;
             width: 25%;
           }
 
-          h4{
+          h4 {
             width: 75%;
             align-self: center;
-            font-size: .5em;
+            font-size: 0.8em;
           }
         }
       }
     }
-
-    ul{
-      list-style: none;
-      margin-bottom: 20px;
-      font-size: .5em;
-    }
-
-    p{
-      font-size: .5em;
-    }
   }
 
-
-
   .coordinates {
-    margin: 30px 0;
+    margin-top: 50px;
     width: 70%;
     border-radius: 15px;
     background: #ffffff20;
@@ -124,7 +132,8 @@ $colorLight: #fafafa;
   }
 
   .hours {
-    margin: 30px 0;
+    margin-top: 25px;
+    margin-bottom: 50px;
     width: 70%;
     border-radius: 15px;
     background: #ffffff20;
